# solverforge-gpt

./: Cargo.toml  Makefile  README.md
data/: creative.txt  swe.txt  work.txt
scripts/: train_creative.sh  train_swe.sh  train_work.sh
src/: lib.rs  main.rs  model.rs  rng.rs  router.rs  tensor.rs  tokenizer.rs
