[package]
name = "microgpt"
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "microgpt"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "build_router"
path = "src/bin/build_router.rs"

[[bin]]
name = "infer"
path = "src/bin/infer.rs"

[dependencies]
